--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-safe-area-context": "^3.4.1",
-    "react-native-screens": "^3.30.1"
+    "react-native-screens": "^3.30.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
